--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -7,9 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <button ion-button menuToggle>
+    <!-- <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
-    </button>
+    </button> -->
+
     <ion-title>Dashboard</ion-title>
   </ion-navbar>
 
